# PyBVH

./: .gitignore  README.md
src/: BVHTree.py  Basis.cu  Basis.cuh  Basis.py  Builder.py  Builderv2.py  CMakeLists.txt  Commons.cuh  CudaPipeline.py  CudaTimer.py  LBVHBuilder.py  Manager.py  MeshGenerator.py  MeshReader.py  Quaternion.cu  Quaternion.cuh  Quaternion.py  RadixSort.cu  Ray.cu  Ray.cuh  RayTracer.cu  RayTracer.cuh  Render.py  RotationQuaternion.cu  RotationQuaternion.cuh  RunPipeline.py  Scene.py  SceneManager.cu  SceneManager.cuh  SceneManager.py  SpaceFilingCurves.cu  SpaceFilingCurves.cuh  TestRandomMesh.py  TreeManager.py  compare.gp  compare.py  compare_bvh_previous.cu  compare_bvh_previous.py  cupy_test.py  data.csv  (+11 more)
src/data/: analysize_res.ipynb  perf_python.csv
src/data/.ipynb_checkpoints/: analysize_res-checkpoint.ipynb
src/deprecated/: Collapser.py  CudaTypes.py  LBVH.cu  LBVH.h  LBVH_apetrei.cu  Optimizer.py  delta.py  plot  source.cu  test_apetrei.py
src/graphviz/: bvh
src/test/: TestRandomMesh.py  test_mesh_bvh  test_mesh_bvh.cu  test_quaternion.py  test_ray_direction.py  test_ray_triangle  test_ray_triangle.cu
